last minute testing changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 </div>
 <script>
         function scrollToBottom() {
-            const chatContainer = document.getElementById('chat-container');
+            const chatContainer = document.getElementById('chatcontainer');
             chatContainer.scrollTop = chatContainer.scrollHeight;
         }
         window.onload = scrollToBottom;
